LLVM Frontend/generated/GrammarParser.cpp

// Generated from Grammar.g4 by ANTLR 4.13.2


#include "GrammarListener.h"
#include "GrammarVisitor.h"

#include "GrammarParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct GrammarParserStaticData final {
  GrammarParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  GrammarParserStaticData(const GrammarParserStaticData&) = delete;
  GrammarParserStaticData(GrammarParserStaticData&&) = delete;
  GrammarParserStaticData& operator=(const GrammarParserStaticData&) = delete;
  GrammarParserStaticData& operator=(GrammarParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag grammarParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<GrammarParserStaticData> grammarParserStaticData = nullptr;

void grammarParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (grammarParserStaticData != nullptr) {
    return;
  }
#else
  assert(grammarParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<GrammarParserStaticData>(
    std::vector<std::string>{
      "program", "funDecl", "line", "forExpr", "ifExpr", "whileExpr", "expr", 
      "funParams", "assign", "create", "varDecl", "arrDecl", "returnExpr"
    },
    std::vector<std::string>{
      "", "'let'", "'('", "')'", "'->'", "'='", "'{'", "'}'", "';'", "'for'", 
      "'['", "','", "']'", "'if'", "'while'", "'arr'", "'return'", "'num'", 
      "'void'", "'\\u003F'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "NUM", "VOID", "TERN_OP", "BIN_OP", "ID", "INT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  grammarParserStaticData = std::move(staticData);
}

}

GrammarParser::GrammarParser(TokenStream *input) : GrammarParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

GrammarParser::GrammarParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  GrammarParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *grammarParserStaticData->atn, grammarParserStaticData->decisionToDFA, grammarParserStaticData->sharedContextCache, options);
}

GrammarParser::~GrammarParser() {
  delete _interpreter;
}

const atn::ATN& GrammarParser::getATN() const {
  return *grammarParserStaticData->atn;
}

std::string GrammarParser::getGrammarFileName() const {
  return "Grammar.g4";
}

const std::vector<std::string>& GrammarParser::getRuleNames() const {
  return grammarParserStaticData->ruleNames;
}

const dfa::Vocabulary& GrammarParser::getVocabulary() const {
  return grammarParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView GrammarParser::getSerializedATN() const {
  return grammarParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

GrammarParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::ProgramContext::EOF() {
  return getToken(GrammarParser::EOF, 0);
}

std::vector<GrammarParser::FunDeclContext *> GrammarParser::ProgramContext::funDecl() {
  return getRuleContexts<GrammarParser::FunDeclContext>();
}

GrammarParser::FunDeclContext* GrammarParser::ProgramContext::funDecl(size_t i) {
  return getRuleContext<GrammarParser::FunDeclContext>(i);
}


size_t GrammarParser::ProgramContext::getRuleIndex() const {
  return GrammarParser::RuleProgram;
}

void GrammarParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void GrammarParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any GrammarParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::ProgramContext* GrammarParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, GrammarParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(27); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(26);
      funDecl();
      setState(29); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == GrammarParser::T__0);
    setState(31);
    match(GrammarParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunDeclContext ------------------------------------------------------------------

GrammarParser::FunDeclContext::FunDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> GrammarParser::FunDeclContext::ID() {
  return getTokens(GrammarParser::ID);
}

tree::TerminalNode* GrammarParser::FunDeclContext::ID(size_t i) {
  return getToken(GrammarParser::ID, i);
}

tree::TerminalNode* GrammarParser::FunDeclContext::NUM() {
  return getToken(GrammarParser::NUM, 0);
}

tree::TerminalNode* GrammarParser::FunDeclContext::VOID() {
  return getToken(GrammarParser::VOID, 0);
}

std::vector<GrammarParser::LineContext *> GrammarParser::FunDeclContext::line() {
  return getRuleContexts<GrammarParser::LineContext>();
}

GrammarParser::LineContext* GrammarParser::FunDeclContext::line(size_t i) {
  return getRuleContext<GrammarParser::LineContext>(i);
}


size_t GrammarParser::FunDeclContext::getRuleIndex() const {
  return GrammarParser::RuleFunDecl;
}

void GrammarParser::FunDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunDecl(this);
}

void GrammarParser::FunDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunDecl(this);
}


std::any GrammarParser::FunDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitFunDecl(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::FunDeclContext* GrammarParser::funDecl() {
  FunDeclContext *_localctx = _tracker.createInstance<FunDeclContext>(_ctx, getState());
  enterRule(_localctx, 2, GrammarParser::RuleFunDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    match(GrammarParser::T__0);
    setState(34);
    match(GrammarParser::ID);
    setState(35);
    match(GrammarParser::T__1);
    setState(39);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GrammarParser::ID) {
      setState(36);
      match(GrammarParser::ID);
      setState(41);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(42);
    match(GrammarParser::T__2);
    setState(43);
    match(GrammarParser::T__3);
    setState(44);
    _la = _input->LA(1);
    if (!(_la == GrammarParser::NUM

    || _la == GrammarParser::VOID)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(45);
    match(GrammarParser::T__4);
    setState(46);
    match(GrammarParser::T__5);
    setState(48); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(47);
      line();
      setState(50); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 8118784) != 0));
    setState(52);
    match(GrammarParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

GrammarParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::ExprContext* GrammarParser::LineContext::expr() {
  return getRuleContext<GrammarParser::ExprContext>(0);
}

GrammarParser::AssignContext* GrammarParser::LineContext::assign() {
  return getRuleContext<GrammarParser::AssignContext>(0);
}

GrammarParser::CreateContext* GrammarParser::LineContext::create() {
  return getRuleContext<GrammarParser::CreateContext>(0);
}

GrammarParser::ReturnExprContext* GrammarParser::LineContext::returnExpr() {
  return getRuleContext<GrammarParser::ReturnExprContext>(0);
}

GrammarParser::ForExprContext* GrammarParser::LineContext::forExpr() {
  return getRuleContext<GrammarParser::ForExprContext>(0);
}

GrammarParser::IfExprContext* GrammarParser::LineContext::ifExpr() {
  return getRuleContext<GrammarParser::IfExprContext>(0);
}

GrammarParser::WhileExprContext* GrammarParser::LineContext::whileExpr() {
  return getRuleContext<GrammarParser::WhileExprContext>(0);
}


size_t GrammarParser::LineContext::getRuleIndex() const {
  return GrammarParser::RuleLine;
}

void GrammarParser::LineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLine(this);
}

void GrammarParser::LineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLine(this);
}


std::any GrammarParser::LineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitLine(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::LineContext* GrammarParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 4, GrammarParser::RuleLine);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(65);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GrammarParser::T__14:
      case GrammarParser::T__15:
      case GrammarParser::NUM:
      case GrammarParser::TERN_OP:
      case GrammarParser::BIN_OP:
      case GrammarParser::ID:
      case GrammarParser::INT: {
        enterOuterAlt(_localctx, 1);
        setState(58);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
        case 1: {
          setState(54);
          expr();
          break;
        }

        case 2: {
          setState(55);
          assign();
          break;
        }

        case 3: {
          setState(56);
          create();
          break;
        }

        case 4: {
          setState(57);
          returnExpr();
          break;
        }

        default:
          break;
        }
        setState(60);
        match(GrammarParser::T__7);
        break;
      }

      case GrammarParser::T__8: {
        enterOuterAlt(_localctx, 2);
        setState(62);
        forExpr();
        break;
      }

      case GrammarParser::T__12: {
        enterOuterAlt(_localctx, 3);
        setState(63);
        ifExpr();
        break;
      }

      case GrammarParser::T__13: {
        enterOuterAlt(_localctx, 4);
        setState(64);
        whileExpr();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForExprContext ------------------------------------------------------------------

GrammarParser::ForExprContext::ForExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> GrammarParser::ForExprContext::ID() {
  return getTokens(GrammarParser::ID);
}

tree::TerminalNode* GrammarParser::ForExprContext::ID(size_t i) {
  return getToken(GrammarParser::ID, i);
}

std::vector<GrammarParser::ExprContext *> GrammarParser::ForExprContext::expr() {
  return getRuleContexts<GrammarParser::ExprContext>();
}

GrammarParser::ExprContext* GrammarParser::ForExprContext::expr(size_t i) {
  return getRuleContext<GrammarParser::ExprContext>(i);
}

std::vector<GrammarParser::LineContext *> GrammarParser::ForExprContext::line() {
  return getRuleContexts<GrammarParser::LineContext>();
}

GrammarParser::LineContext* GrammarParser::ForExprContext::line(size_t i) {
  return getRuleContext<GrammarParser::LineContext>(i);
}


size_t GrammarParser::ForExprContext::getRuleIndex() const {
  return GrammarParser::RuleForExpr;
}

void GrammarParser::ForExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForExpr(this);
}

void GrammarParser::ForExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForExpr(this);
}


std::any GrammarParser::ForExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitForExpr(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::ForExprContext* GrammarParser::forExpr() {
  ForExprContext *_localctx = _tracker.createInstance<ForExprContext>(_ctx, getState());
  enterRule(_localctx, 6, GrammarParser::RuleForExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    match(GrammarParser::T__8);
    setState(76); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(68);
      match(GrammarParser::T__9);
      setState(69);
      match(GrammarParser::ID);
      setState(70);
      match(GrammarParser::T__10);
      setState(71);
      expr();
      setState(72);
      match(GrammarParser::T__10);
      setState(73);
      expr();
      setState(74);
      match(GrammarParser::T__11);
      setState(78); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == GrammarParser::T__9);
    setState(80);
    match(GrammarParser::T__5);
    setState(82); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(81);
      line();
      setState(84); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 8118784) != 0));
    setState(86);
    match(GrammarParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfExprContext ------------------------------------------------------------------

GrammarParser::IfExprContext::IfExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::ExprContext* GrammarParser::IfExprContext::expr() {
  return getRuleContext<GrammarParser::ExprContext>(0);
}

std::vector<GrammarParser::LineContext *> GrammarParser::IfExprContext::line() {
  return getRuleContexts<GrammarParser::LineContext>();
}

GrammarParser::LineContext* GrammarParser::IfExprContext::line(size_t i) {
  return getRuleContext<GrammarParser::LineContext>(i);
}


size_t GrammarParser::IfExprContext::getRuleIndex() const {
  return GrammarParser::RuleIfExpr;
}

void GrammarParser::IfExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfExpr(this);
}

void GrammarParser::IfExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfExpr(this);
}


std::any GrammarParser::IfExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitIfExpr(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::IfExprContext* GrammarParser::ifExpr() {
  IfExprContext *_localctx = _tracker.createInstance<IfExprContext>(_ctx, getState());
  enterRule(_localctx, 8, GrammarParser::RuleIfExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(GrammarParser::T__12);
    setState(89);
    match(GrammarParser::T__9);
    setState(90);
    expr();
    setState(91);
    match(GrammarParser::T__11);
    setState(92);
    match(GrammarParser::T__5);
    setState(94); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(93);
      line();
      setState(96); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 8118784) != 0));
    setState(98);
    match(GrammarParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileExprContext ------------------------------------------------------------------

GrammarParser::WhileExprContext::WhileExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::ExprContext* GrammarParser::WhileExprContext::expr() {
  return getRuleContext<GrammarParser::ExprContext>(0);
}

std::vector<GrammarParser::LineContext *> GrammarParser::WhileExprContext::line() {
  return getRuleContexts<GrammarParser::LineContext>();
}

GrammarParser::LineContext* GrammarParser::WhileExprContext::line(size_t i) {
  return getRuleContext<GrammarParser::LineContext>(i);
}


size_t GrammarParser::WhileExprContext::getRuleIndex() const {
  return GrammarParser::RuleWhileExpr;
}

void GrammarParser::WhileExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhileExpr(this);
}

void GrammarParser::WhileExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhileExpr(this);
}


std::any GrammarParser::WhileExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitWhileExpr(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::WhileExprContext* GrammarParser::whileExpr() {
  WhileExprContext *_localctx = _tracker.createInstance<WhileExprContext>(_ctx, getState());
  enterRule(_localctx, 10, GrammarParser::RuleWhileExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    match(GrammarParser::T__13);
    setState(101);
    match(GrammarParser::T__9);
    setState(102);
    expr();
    setState(103);
    match(GrammarParser::T__11);
    setState(104);
    match(GrammarParser::T__5);
    setState(106); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(105);
      line();
      setState(108); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 8118784) != 0));
    setState(110);
    match(GrammarParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

GrammarParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::ExprContext::ID() {
  return getToken(GrammarParser::ID, 0);
}

GrammarParser::FunParamsContext* GrammarParser::ExprContext::funParams() {
  return getRuleContext<GrammarParser::FunParamsContext>(0);
}

std::vector<GrammarParser::ExprContext *> GrammarParser::ExprContext::expr() {
  return getRuleContexts<GrammarParser::ExprContext>();
}

GrammarParser::ExprContext* GrammarParser::ExprContext::expr(size_t i) {
  return getRuleContext<GrammarParser::ExprContext>(i);
}

tree::TerminalNode* GrammarParser::ExprContext::TERN_OP() {
  return getToken(GrammarParser::TERN_OP, 0);
}

tree::TerminalNode* GrammarParser::ExprContext::BIN_OP() {
  return getToken(GrammarParser::BIN_OP, 0);
}

tree::TerminalNode* GrammarParser::ExprContext::INT() {
  return getToken(GrammarParser::INT, 0);
}


size_t GrammarParser::ExprContext::getRuleIndex() const {
  return GrammarParser::RuleExpr;
}

void GrammarParser::ExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpr(this);
}

void GrammarParser::ExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpr(this);
}


std::any GrammarParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::ExprContext* GrammarParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 12, GrammarParser::RuleExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(145);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(112);
      match(GrammarParser::ID);
      setState(113);
      funParams();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(114);
      match(GrammarParser::ID);
      setState(126);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == GrammarParser::T__9) {
        setState(115);
        match(GrammarParser::T__9);
        setState(116);
        expr();
        setState(121);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == GrammarParser::T__10) {
          setState(117);
          match(GrammarParser::T__10);
          setState(118);
          expr();
          setState(123);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(124);
        match(GrammarParser::T__11);
      }
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(128);
      match(GrammarParser::TERN_OP);
      setState(129);
      match(GrammarParser::T__1);
      setState(130);
      expr();
      setState(131);
      match(GrammarParser::T__10);
      setState(132);
      expr();
      setState(133);
      match(GrammarParser::T__10);
      setState(134);
      expr();
      setState(135);
      match(GrammarParser::T__2);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(137);
      match(GrammarParser::BIN_OP);
      setState(138);
      match(GrammarParser::T__1);
      setState(139);
      expr();
      setState(140);
      match(GrammarParser::T__10);
      setState(141);
      expr();
      setState(142);
      match(GrammarParser::T__2);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(144);
      match(GrammarParser::INT);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunParamsContext ------------------------------------------------------------------

GrammarParser::FunParamsContext::FunParamsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GrammarParser::ExprContext *> GrammarParser::FunParamsContext::expr() {
  return getRuleContexts<GrammarParser::ExprContext>();
}

GrammarParser::ExprContext* GrammarParser::FunParamsContext::expr(size_t i) {
  return getRuleContext<GrammarParser::ExprContext>(i);
}


size_t GrammarParser::FunParamsContext::getRuleIndex() const {
  return GrammarParser::RuleFunParams;
}

void GrammarParser::FunParamsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunParams(this);
}

void GrammarParser::FunParamsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunParams(this);
}


std::any GrammarParser::FunParamsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitFunParams(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::FunParamsContext* GrammarParser::funParams() {
  FunParamsContext *_localctx = _tracker.createInstance<FunParamsContext>(_ctx, getState());
  enterRule(_localctx, 14, GrammarParser::RuleFunParams);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(147);
    match(GrammarParser::T__1);
    setState(156);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 7864320) != 0)) {
      setState(148);
      expr();
      setState(153);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == GrammarParser::T__10) {
        setState(149);
        match(GrammarParser::T__10);
        setState(150);
        expr();
        setState(155);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(158);
    match(GrammarParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignContext ------------------------------------------------------------------

GrammarParser::AssignContext::AssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::AssignContext::ID() {
  return getToken(GrammarParser::ID, 0);
}

std::vector<GrammarParser::ExprContext *> GrammarParser::AssignContext::expr() {
  return getRuleContexts<GrammarParser::ExprContext>();
}

GrammarParser::ExprContext* GrammarParser::AssignContext::expr(size_t i) {
  return getRuleContext<GrammarParser::ExprContext>(i);
}


size_t GrammarParser::AssignContext::getRuleIndex() const {
  return GrammarParser::RuleAssign;
}

void GrammarParser::AssignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssign(this);
}

void GrammarParser::AssignContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssign(this);
}


std::any GrammarParser::AssignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitAssign(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::AssignContext* GrammarParser::assign() {
  AssignContext *_localctx = _tracker.createInstance<AssignContext>(_ctx, getState());
  enterRule(_localctx, 16, GrammarParser::RuleAssign);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(160);
    match(GrammarParser::ID);
    setState(172);
    _errHandler->sync(this);
